Fix dark mode issue on refresh

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,8 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #40429b;
+  color: white;
 }
 
 @media screen and (max-width: 966px) {
